# Galaxy

./: .gitignore  CMakeLists.txt  README.md
cases/: example.inp
cases/output/: particles_0.csv  particles_1.csv  particles_10.csv  particles_100.csv  particles_2.csv  particles_3.csv  particles_4.csv  particles_5.csv  particles_6.csv  particles_7.csv  particles_8.csv  particles_9.csv
src/: CMakeLists.txt  CSVParticleWriter.h  Engine.h  EngineCPU.cpp  EngineCUDA.cu  IOTools.h  InitialConditions.cpp  InitialConditions.h  InputData.cpp  InputData.h  InputParser.cpp  InputParser.h  Particles.h  Types.h  main.cpp
